--- a/requirements.prod.in
+++ b/requirements.prod.in
@@ -8,3 +8,4 @@ mkdocs-macros-plugin
 mkdocs-material
 https://github.com/opensafely-core/mkdocs-opensafely-databuilder/archive/99f9f3ec5025d5cf9030cafb1189576a4ebf6a7c.zip#mkdocs-opensafely-databuilder
 mkdocstrings[python]
+mkdocs-table-reader-plugin
