Add initial attempt at checking results
To ensure that the dataset definitions haven't changed since the results
were last committed.

This uses the new CLI as in
https://github.com/opensafely-core/databuilder/pull/672

--- a/.github/workflows/check_snippets.yml
+++ b/.github/workflows/check_snippets.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Check dataset definitions run
         run: just databuilder/check-dataset-definitions
 
+      - name: Check dataset definition outputs are up-to-date
+        run: just databuilder/check-dataset-definitions-outputs-are-current
+
       - name: Check snippets work
         run: |
           # extract examples from the snippets, this will also test they are
