--- a/databuilder/justfile
+++ b/databuilder/justfile
@@ -112,7 +112,6 @@ fix: devenv
 
 
 # Run the dataset definitions.
-# This is in lieu of actually validating the outputs from dataset definitions against inputs which we should implement.
 check-dataset-definitions: devenv
     #!/usr/bin/env bash
     set -euo pipefail
@@ -122,9 +121,27 @@ check-dataset-definitions: devenv
     for f in ./databuilder/ehrql-tutorial-examples/*dataset_definition.py; do
       # By convention, we name dataset definition as: EXAMPLENUMBER_EXAMPLEDATASET_dataset_definition.py
       DATASET=`echo "$f" | cut -d'_' -f2`
-      DATABASE_URL="./databuilder/ehrql-tutorial-examples/example-data/$DATASET/" databuilder/$BIN/python -m databuilder generate-dataset --dataset-definition "$f" --output /dev/stdout
+      DATABASE_URL="./databuilder/ehrql-tutorial-examples/example-data/$DATASET/" databuilder/$BIN/databuilder generate-dataset "$f"
 
     done
+
+
+check-dataset-definitions-outputs-are-current: devenv build-dataset-definitions-outputs
+    #!/usr/bin/env bash
+    set -euo pipefail
+
+    cd {{parent_directory(justfile_directory())}}
+
+    # https://stackoverflow.com/questions/3878624/how-do-i-programmatically-determine-if-there-are-uncommitted-changes
+    # git diff --exit-code won't pick up untracked files, which we also want to check for.
+    if [[ -z $(git status --porcelain ./databuilder/ehrql-tutorial-examples/results/; git clean -nd ./databuilder/ehrql-tutorial-examples/results/) ]]
+    then
+      echo "Dataset definition results directory is current and free of other files/directories."
+    else
+      echo "Dataset definition results contains files/directories not in the repository."
+      exit
+    fi
+
 
 build-dataset-definitions-outputs: devenv
     #!/usr/bin/env bash
@@ -136,7 +153,7 @@ build-dataset-definitions-outputs: devenv
       # By convention, we name dataset definition as: EXAMPLENUMBER_EXAMPLEDATASET_dataset_definition.py
       DATASET=`echo "$f" | cut -d'_' -f2`
       FILENAME="$(basename "$f" .py).csv"
-      DATABASE_URL="./databuilder/ehrql-tutorial-examples/example-data/$DATASET/" databuilder/$BIN/python -m databuilder generate-dataset --dataset-definition "$f" --output "./databuilder/ehrql-tutorial-examples/results/$FILENAME"
+      DATABASE_URL="./databuilder/ehrql-tutorial-examples/example-data/$DATASET/" databuilder/$BIN/databuilder generate-dataset --output "./databuilder/ehrql-tutorial-examples/results/$FILENAME" "$f"
 
     done
 
