--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -31,6 +31,7 @@ jobs:
         run: echo ${{ github.sha }} > site/version.html
 
       - name: Publish
+        if: ${{ github.actor != 'dependabot[bot]' }}
         uses: cloudflare/pages-action@1
         with:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
