Use revision date plugin

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -111,6 +111,7 @@ copyright: © University of Oxford for the Bennett Institute for Applied Data Sc
 plugins:
   - search
   - table-reader
+  - git-revision-date
   - mkdocstrings:
       default_handler: python
       handlers:
