--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -10,6 +10,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+          # Fetch entire repository history to determine last revision dates of pages.
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v4
