--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,11 @@ nav:
       - Jobs site: jobs-site.md
       - Level 4 server: level-4-server.md
       - Safe Outputs and requesting release of files from the Level 4 server: releasing-files.md
+      - Reports:
+        - Overview: reports/intro.md
+        - Create a draft: reports/create-a-draft.md
+        - Review process: reports/review-process.md
+        - Publishing a report: reports/publish-a-report.md
   - OpenSAFELY best practice:
       - Bennett Institute Open Manifesto: open-data-manifesto.md
       - Publishing your GitHub Repository: publishing-repo.md
