Use newer way to load CSV data
Also makes the `project.yaml` work, albeit with a locally built Docker
image from the Data Builder branch containing the tutorial tables
changes.

--- a/databuilder/ehrql-tutorial-examples/project.yaml
+++ b/databuilder/ehrql-tutorial-examples/project.yaml
@@ -5,7 +5,7 @@ expectations:
 
 actions:
   extract_minimal_cohort:
-    run: databuilder:v0 generate-dataset "./1a_minimal_dataset_definition.py" --dsn "example-data/minimal"
+    run: databuilder:v0 generate-dataset "./1a_minimal_dataset_definition.py" --dummy-tables "example-data/minimal" --output "outputs/1a_minimal_dataset_definition.csv"
     outputs:
       highly_sensitive:
         cohort: outputs/1a_minimal_dataset_definition.csv
