Watch ehrQL example directory
So that changes to the files here are picked up automatically for local
development.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -131,6 +131,7 @@ watch:
   - examples
   - includes
   - public_docs.json
+  - databuilder/ehrql-tutorial-examples
   - src/cohort-extractor/cohortextractor
 
 markdown_extensions:
