Rename `cohort` variable to `population`
And rename in `project.yaml` too for consistency.

See suggestion in #999.

--- a/databuilder/ehrql-tutorial-examples/project.yaml
+++ b/databuilder/ehrql-tutorial-examples/project.yaml
@@ -4,8 +4,8 @@ expectations:
   population_size: 3000
 
 actions:
-  extract_minimal_cohort:
+  extract_minimal_population:
     run: databuilder:v0 generate-dataset "./1a_minimal_dataset_definition.py" --dummy-tables "example-data/minimal" --output "outputs/1a_minimal_dataset_definition.csv"
     outputs:
       highly_sensitive:
-        cohort: outputs/1a_minimal_dataset_definition.csv
+        population: outputs/1a_minimal_dataset_definition.csv
