Use collapsible blocks in tutorial
For example code, input tables and outputs.

This allows the reader to show and hide these. By default, we display
them. But it helps allow reduction of vertical space, if necessary.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,6 +135,7 @@ watch:
   - src/cohort-extractor/cohortextractor
 
 markdown_extensions:
+  - pymdownx.details
   - pymdownx.snippets:
       check_paths: true
   - pymdownx.superfences:
