Ignore OpenSAFELY CLI generated `metadata/`

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ __pycache__/
 
 # MkDocs output
 site/
+
+# OpenSAFELY CLI metadata output for tutorial dataset definitions
+databuilder/ehrql-tutorial-examples/metadata/
