Pin Data Builder version to an actual release
Instead of an arbitrary branch commit.

The tables needed to make the examples work are now in the `main` branch
and part of the latest release.

--- a/databuilder/requirements.prod.txt
+++ b/databuilder/requirements.prod.txt
@@ -160,8 +160,8 @@ numpy==1.23.1 \
     # via
     #   pandas
     #   pyarrow
-opensafely-databuilder @ https://github.com/opensafely-core/databuilder/archive/7d7db6f65597b4ecaf3f63d2720b4f004bf1e65f.zip \
-    --hash=sha256:6cf49141feb5b9edb5acfb98c1ac40e52f97000af06d6af11d3faa1fc953800b
+opensafely-databuilder @ https://github.com/opensafely-core/databuilder/archive/refs/tags/v0.56.2.zip \
+    --hash=sha256:c90ff5516d03d09e5d939d8b6e4fc1eb1c877ce523e48e3ea61ba1de4afabcca
     # via -r databuilder/requirements.prod.in
 pandas==1.4.3 \
     --hash=sha256:07238a58d7cbc8a004855ade7b75bbd22c0db4b0ffccc721556bab8a095515f6 \
