--- a/databuilder/requirements.dev.in
+++ b/databuilder/requirements.dev.in
@@ -4,10 +4,7 @@
 # To generate a requirements file that includes both prod and dev requirements, run:
 # pip-compile --generate-hashes --output-file=requirements.dev.txt requirements.dev.in
 
-# Pin black for now to avoid dependency constraint conflict.
-# black and snex both use click, but snex uses an older version of click.
-# See #886.
-black==21.12b0
+black
 flake8
 flake8-builtins
 flake8-implicit-str-concat
