Remove `examples/` directory
This contains snippets processed by snex.

With PyMdown, we will just use the snippets directly.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -133,9 +133,9 @@ plugins:
   - macros
 
 watch:
-  - examples
   - includes
   - public_docs.json
+  - databuilder/snippets
   - databuilder/ehrql-tutorial-examples
   - src/cohort-extractor/cohortextractor
 
