--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -25,7 +25,7 @@ jobs:
           python3 -m pip install -r ./requirements.txt
 
       - name: Build site
-        run: mkdocs build
+        run: MKDOCS_SITE_URL="https://docs.opensafely.org" mkdocs build
 
       - name: Add a version file
         run: echo ${{ github.sha }} > site/version.html
