Add  mkdocs-multirepo-plugin

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ site/
 
 # OpenSAFELY CLI metadata output for tutorial dataset definitions
 databuilder/ehrql-tutorial-examples/metadata/
+
+# mkdocs-multirepo-plugin
+temp_dir/
