--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,7 @@
 site_name: OpenSAFELY documentation
 site_url: !ENV MKDOCS_SITE_URL
 repo_url: https://github.com/opensafely/documentation
+
 nav:
   - Introduction: index.md
   - About OpenSAFELY:
@@ -75,6 +76,7 @@ nav:
       - Code reviews: code-reviews.md
       - Case-control studies: case-control-studies.md
       - Writing performant code: memory-efficient-working.md
+  - Data Builder (imported): '!import https://github.com/opensafely-core/databuilder?branch=docs-spike-2&docs_dir=docs'
   - Support:
       - How to get help: how-to-get-help.md
       - Requesting new libraries: requesting-libraries.md
@@ -82,7 +84,6 @@ nav:
       - Updating the documentation: updating-the-docs.md
   - Contributing: contributing.md
   - Platform News: https://www.opensafely.org/changelog/
-
 theme:
   name: material
   font: false
@@ -94,7 +95,7 @@ theme:
   features:
     - navigation.indexes
 
-edit_uri: "edit/main/docs"
+edit_uri: "edit/main/docs/"
 
 extra_css:
   - css/youtube.css
@@ -132,6 +133,8 @@ plugins:
       custom_templates: templates
   - mkdocs-opensafely-databuilder
   - macros
+  - multirepo:
+      cleanup: false
 
 watch:
   - includes
