--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,7 +137,7 @@ plugins:
   - mkdocs-opensafely-databuilder
   - macros
   - multirepo:
-      cleanup: false
+      cleanup: true
       temp_dir: imported_docs
 
 watch:
