Limit permissions for github actions

--- a/.github/workflows/pages-deployment.yml
+++ b/.github/workflows/pages-deployment.yml
@@ -2,6 +2,11 @@ on: [push]
 
 jobs:
   deploy:
+
+    permissions:
+      contents: read
+      deployments: write
+
     runs-on: ubuntu-latest
 
     name: Deploy to Cloudflare Pages
