--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,6 +112,10 @@ extra:
     - icon: fontawesome/brands/twitter
       link: https://twitter.com/opensafely
       name: OpenSAFELY on Twitter
+  hide_nav_sections:
+    # These sections are specified in the nav above, but hidden in the built docs
+    # so they are accessible via URL oly
+    - "Data Builder (imported)"
 
 copyright: © University of Oxford for the Bennett Institute for Applied Data Science. This work may be copied freely for non-commercial research and study. If you wish to do any of the other acts restricted by the copyright you should apply in writing to bennett@phc.ox.ac.uk.
 
@@ -174,3 +178,4 @@ markdown_extensions:
 
 hooks:
     - hooks/parent_snippets.py
+    - hooks/hide_nav_sections.py
