Update URLs and config paths for imported databuilder docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,7 +76,7 @@ nav:
       - Code reviews: code-reviews.md
       - Case-control studies: case-control-studies.md
       - Writing performant code: memory-efficient-working.md
-  - Data Builder (imported): '!import https://github.com/opensafely-core/databuilder?branch=docs-spike-2&docs_dir=docs'
+  - Data Builder: '!import https://github.com/opensafely-core/databuilder?branch=docs-spike-2&docs_dir=docs'
   - Support:
       - How to get help: how-to-get-help.md
       - Requesting new libraries: requesting-libraries.md
@@ -115,16 +115,14 @@ extra:
   hide_nav_sections:
     # These sections are specified in the nav above, but hidden in the built docs
     # so they are accessible via URL oly
-    - "Data Builder (imported)"
+    - "Data Builder"
 
 copyright: © University of Oxford for the Bennett Institute for Applied Data Science. This work may be copied freely for non-commercial research and study. If you wish to do any of the other acts restricted by the copyright you should apply in writing to bennett@phc.ox.ac.uk.
 
 plugins:
   - search
   - table-reader:
-      data_paths:  # data paths will be checked in order for matching csv files
-        - "."  # dir containing this config file
-        - "imported_docs/data-builder-imported"  # docs folder for the imported repo
+      data_path: imported_docs/data-builder
   - mkdocstrings:
       default_handler: python
       handlers:
@@ -157,7 +155,7 @@ markdown_extensions:
       check_paths: true
       base_path: # base paths will be checked in order for matching snippets
         - .  # dir containing this config file
-        - imported_docs/data-builder-imported # docs folder for the imported repo
+        - imported_docs/data-builder # docs folder for the imported repo
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
