--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
       - How to get help: how-to-get-help.md
       - Requesting new libraries: requesting-libraries.md
       - Requesting study definition variables: requesting-variables.md
+      - Plan S and OpenSAFELY: plan-s.md
       - Updating the documentation: updating-the-docs.md
   - Contributing: contributing.md
   - Platform News: https://www.opensafely.org/changelog/
