Changing the spelling of copilot to co-pilot
@lisahopcroft had been lazy (efficient?) and had used "copilot" rather than "co-pilot" throughout the co-piloting documentation. This is corrected in this commit. Two exceptions: (1) the name of the file (copiloting_service.md) has not been changed however just in case this breaks links that have been shared outside of this documentation; (2) "copilot" is used in mermaid diagram labels, as "-" might not be an acceptable character.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,7 +79,7 @@ nav:
   - Data Builder: '!import https://github.com/opensafely-core/databuilder?branch=main'
   - Support:
       - How to get help: how-to-get-help.md
-      - OpenSAFELY copiloting service: copiloting-service.md
+      - OpenSAFELY co-piloting service: copiloting-service.md
       - Requesting new libraries: requesting-libraries.md
       - Requesting study definition variables: requesting-variables.md
       - Plan S and OpenSAFELY: plan-s.md
